[tool.poetry]
name = "slackdump"
version = "0.0.4"
description = "dump slack data"
authors = ["sloev <johanned.valbjorn@gmail.com>"]
license = "MIT"
readme = "README.md"
include = [
    "LICENSE",
    "README.md",
]
homepage = "https://github.com/sloev/slackdump"
repository = "https://github.com/sloev/slackdump"

[tool.poetry.dependencies]
python = "^3.7"
pyppeteer = "^0.0.25"

[tool.poetry.dev-dependencies]
black = "^19.10b0"

[tool.poetry.scripts]
slackdump = 'slackdump:cli'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
